# AI-Study-Assistant

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  app.py  bandit.yaml  pyproject.toml  requirements.txt  test.py
pages/: notes.py  quiz.py
translations/: languages.py
