[project]
name = "ai-study-assistant"
version = "1.0.0"
description = "AI Study Assistant built with Streamlit and Google Gemini"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "streamlit",
    "google-genai",
    "python-dotenv",
    "pypdf",
    "pytest",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88

[tool.bandit]
exclude_dirs = [
    "venv",
    "tests",
    "__pycache__",
    ".git",
]

[tool.vulture]
exclude = [
    "venv/",
    "__pycache__/",
    ".git/",
]
min_confidence = 80
